@@ -1,6 +1,6 @@
 package com.entityManager.security;
 
-import java.util.Collections;
+import java.util.List;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -27,16 +27,16 @@ public class SecurityConfig {
 	public static final String ROLE_USER = "USER";
 	public static final String ROLE_ADMIN = "ADMIN";
 	
-	public static final String[] PUBLIC_END_POINTS = {"/", "/login", "/error", "/register"};
-	//public static final String[] RESTRICTED_END_POINTS = {"/employees"};
-	public static final String [] ADMIN_END_POINTS = {"/employees/new", "/employees/edit/**", "/employees/delete/**"};
+	private static final String[] PUBLIC_END_POINTS = {"/", "/login", "/error", "/register"};
+	private static final String EMPLOYEES_END_POINTS = "/employees";
+	private static final String[] ADMIN_END_POINTS = {"/employees/new", "/employees/edit/**", "/employees/delete/**"};
 	
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers(PUBLIC_END_POINTS).permitAll() // Public access
-                .requestMatchers("/employees").hasAnyRole("USER", "ADMIN") // USER and ADMIN can view employees
+                .requestMatchers(EMPLOYEES_END_POINTS).hasAnyRole("USER", "ADMIN") // USER and ADMIN can view employees
                 .requestMatchers( ADMIN_END_POINTS).hasRole("ADMIN") // Only ADMIN can create, edit, delete
                 
             )
@@ -61,16 +61,16 @@ public class SecurityConfig {
     public UserDetailsService userDetailsService(UserRepo userRepo ) {
     	//logic to get user from database
     	return username->{
-    		User user1  = userRepo.findByUsername(username);
+    		User user  = userRepo.findByUsername(username);
     		
-    		if(user1 == null) {
+    		if(user == null) {
     			throw  new UsernameNotFoundException("User Not Found");
     		}
     		return new org.springframework.security.core.userdetails.User(
-    				user1.getUsername(), 
-    				user1.getPassword(), 
-    				Collections.singletonList(new SimpleGrantedAuthority(toSpringRole(user1.getRole())))
-    				);
+    				user.getUsername(), 
+    				user.getPassword(), 
+    				List.of(new SimpleGrantedAuthority(toSpringRole(user.getRole())))
+    				); 
     	};
    }
     private String toSpringRole(String role) {
@@ -80,20 +80,25 @@ public class SecurityConfig {
     @Bean
     public CommandLineRunner initAdminUser(UserRepo userRepository, PasswordEncoder passwordEncoder) {
         return args -> {
+        	//Defining the default password
+        	String defaultAdminPassword = "mub";
+        	String adminPassword = System.getenv("ADMIN_PASSWORD");
+        	if(adminPassword == null) {
+        		adminPassword = defaultAdminPassword;
+        		logger.warn("ADMIN_PASSWORD environment variable not set. Using default password.");
+        	}
             // Check if admin already exists
             if (userRepository.findByUsername("admin") == null) {
                 // Create admin user
                 User adminUser = new User();
                 adminUser.setUsername("admin");
-                adminUser.setPassword(passwordEncoder.encode(System.getenv("ADMIN_PASSWORD") != null ? System.getenv("ADMIN_PASSWORD") : "adminpass")); // Set a secure password
+                //adminUser.setPassword(passwordEncoder.encode(System.getenv("ADMIN_PASSWORD") != null ? System.getenv("ADMIN_PASSWORD") : "adminpass")); // Set a secure password
+                adminUser.setPassword(passwordEncoder.encode(adminPassword));
                 adminUser.setRole(ROLE_ADMIN);
                 
                 userRepository.save(adminUser);
-                if (System.getenv("ADMIN_PASSWORD") == null) {
-                    logger.warn("ADMIN_PASSWORD environment variable not set. Using default password.");
-                }
+                logger.info("Admin user created: username='admin', password='{}'", adminPassword.equals(defaultAdminPassword) ? defaultAdminPassword : "[ENVIRONMENT PASSWORD]");
 
-                logger.info("Admin user created: username='admin', password='adminpassword'");
             }
         };
     }
